--- a/styles/main.css
+++ b/styles/main.css
@@ -6,25 +6,29 @@
 }
 
 body{
-  background-color: var( --color-background);
+  background-color:var(--color-background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
+body,input,button,textarea{
+  font: 500 1.6rem Poppins;
+  color: var(--color-text-base)
 
+}
+#container{
+  width: 90vw;
+  max-width: 700px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media(min-width:700px){
+  :root{
+    /* todo 1rem vai ser relativo a 10px */
+    font-size: 62.5%;
+  }
+}
 :root {
     --color-background: #F0F0F7;
     --color-primary-lighter: #9871F5;
@@ -45,5 +49,8 @@ body{
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
     --color-small-info: #C1BCCC;
+
+/* tamanho da fonte padrao 16px - 100%- 1rem */
+
     font-size: 60%; /* controle das medidas rem */
 }
