--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -4,7 +4,7 @@
 }
 
 #page-give-classes .page-header .header-content{
-  margin-top: 2.4rem;
+  margin-top: 6.4rem;
 }
 
 #page-give-classes main{
@@ -14,8 +14,8 @@
   border-radius: .8rem;
   margin: -3.2rem auto 3.2rem;
   padding-top: 6.4rem;
-
 }
+
 #page-give-classes fieldset{
   border:none;
   padding: 0 2.4rem;
@@ -134,11 +134,11 @@
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     column-gap: 1.6rem;
-
   }
 
   #page-give-classes #schedule-items .select-block+.input-block,
-  #page-give-classes #schedule-items .input-block+.input-block{
+  #page-give-classes #schedule-items .input-block+.input-block
+  {
     margin-top: 0;
   }
 
@@ -147,12 +147,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
   }
 
   #page-give-classes main footer button{
-    margin-top: 0;
+    margin-top:0;
     width: 200px;
   }
 
-  
+}
