--- a/public/styles/partials/page-study.css
+++ b/public/styles/partials/page-study.css
@@ -118,7 +118,7 @@
   display: block;
 }
 
-.teacher-item footer button{
+.teacher-item footer .button{
   width:20rem;
   height: 5.6rem;
   background: var(--color-secondary);
@@ -141,7 +141,7 @@
 
 }
 
-.teacher-item footer button:hover{
+.teacher-item footer .button:hover{
   background-color: var( --color-secondary-dark);
 
 
